# trillium

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cert.pem  chain.pem  codecov.yml  crates.js  h3-planning.md  h3-progress.md  help.html  index.html  key.pem  netlify.toml  release-plz.toml  renovate.json  rustfmt.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml
api/: CHANGELOG.md  Cargo.toml  README.md
api-macros/: CHANGELOG.md  Cargo.toml  README.md
api-macros/src/: attributes.rs  coverage_tests.rs  handler.rs  lib.rs  try_from_conn.rs
api-macros/tests/: integration.rs  test.rs
api/docs/: error_handling.md  extractors.md  recipes.md  return_types.md  root.md
api/examples/: api.rs  cancel_on_disconnect.rs  missing_handler.rs  todo_app.rs
api/src/: api_conn_ext.rs  api_handler.rs  api_with_body_handler.rs  body.rs  cancel_on_disconnect.rs  default_error_handler.rs  error.rs  error_handler.rs  extract.rs  extract_handler.rs  from_conn.rs  halt.rs  json.rs  json_handler.rs  lib.rs  missing_handler.rs  state.rs  state_handler.rs  try_from_conn.rs
api/tests/: disconnect-body.rs  tests.rs
askama/: CHANGELOG.md  Cargo.toml  README.md
askama/examples/: askama.rs  example.rs
askama/src/: lib.rs
async-std/: CHANGELOG.md  Cargo.toml  README.md
async-std-server/: Cargo.toml
async-std-server/examples/: async-std-server.rs
async-std-server/src/: lib.rs
async-std/examples/: async-std.rs
async-std/src/: client.rs  lib.rs  runtime.rs  server.rs  transport.rs  udp.rs
aws-lambda/: CHANGELOG.md  Cargo.toml  README.md
aws-lambda-example/: Cargo.toml  deploy
aws-lambda-example/src/: main.rs
aws-lambda/examples/: aws-lambda.rs
aws-lambda/src/: context.rs  lib.rs  request.rs  response.rs
basic-auth/: CHANGELOG.md  Cargo.toml  README.md
basic-auth/src/: lib.rs
basic-auth/tests/: tests.rs
bench/: Cargo.toml
bench/notes/: h2-bench-debrief-2026-04-27.md  h3-bench-debrief-2026-04-27.md
bench/scripts/: allocator-shootout.sh  baseline.sh  endpoint-sweep.sh  h1-parse-sweep.sh  h1-sweep.sh  h3-sweep.sh  profile-echo-hyper.sh  profile-echo.sh  profile-h1-1m.sh  profile-recv.sh  recv-sweep.sh  run-server.sh  scaling-shootout-nodelay.sh  scaling-shootout.sh  sweep-window-size.sh
caching-headers/: CHANGELOG.md  Cargo.toml  README.md
caching-headers/examples/: caching-headers.rs
caching-headers/src/: cache_control.rs  caching_conn_ext.rs  etag.rs  lib.rs  modified.rs
caching-headers/tests/: etag.rs  modified.rs  tests.rs
channels/: CHANGELOG.md  Cargo.toml  README.md
channels/examples/: channels.rs  simple_channels.rs
channels/src/: channel.rs  channel_broadcaster.rs  channel_central.rs  channel_client.rs  channel_conn.rs  channel_event.rs  channel_ext.rs  channel_handler.rs  channels.rs  client_receiver.rs  lib.rs  subscriptions.rs  version.rs
cli/: Cargo.toml
cli/src/: cli_options.rs  client.rs  dev_server.js  dev_server.rs  lib.rs  main.rs  root_path.rs  static_cli_options.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/examples/: cli.rs  client.rs  doh.rs  h3_client.rs
client/src/: client.rs  client_handler.rs  client_like.rs  conn.rs  conn_handler_ext.rs  cookies.rs  dns.rs  expect_status.rs  follow_redirects.rs  h3.rs  into_url.rs  lib.rs  method.rs  native_tls_transport.rs  pool.rs  reaper.rs  response_body.rs  rustls_transport.rs  sse.rs  transport.rs  util.rs  websocket.rs  webtransport.rs
client/tests/: base.rs  client_handler.rs  corpus_h1.rs  default_headers.rs  doh.rs  early_hints.rs  h2_alpn.rs  h2_extended_connect_gate.rs  h2_websocket.rs  h2c_prior_knowledge.rs  h3_hinted_downgrade.rs  h3_trailers.rs  h3_websocket.rs  http1_0.rs  into_url.rs  one_hundred_continue.rs  response_body_lifecycle.rs  sse.rs  synthesis.rs  timeout.rs  unsafe_headers.rs  websocket.rs
compression/: CHANGELOG.md  Cargo.toml  README.md
compression/examples/: compression.rs
compression/src/: client.rs  lib.rs
compression/tests/: client.rs  tests.rs
conformance/: Cargo.toml  h2spec-pass-set.txt
conformance/src/: h2spec.rs  main.rs  server.rs
conn-id/: CHANGELOG.md  Cargo.toml  README.md
conn-id/src/: lib.rs
conn-id/tests/: tests.rs
cookies/: CHANGELOG.md  Cargo.toml  README.md
cookies/examples/: cookies.rs
cookies/src/: client.rs  cookies_conn_ext.rs  cookies_handler.rs  lib.rs
cookies/tests/: client.rs
errors/: Cargo.toml
errors/examples/: errors.rs
errors/src/: lib.rs
example/: Cargo.toml
example/public/: index.html
example/src/: main.rs
forwarding/: CHANGELOG.md  Cargo.toml  README.md
forwarding/examples/: forwarding.rs
forwarding/src/: forwarded.rs  lib.rs  parse_utils.rs
forwarding/tests/: tests.rs
fuzz/: Cargo.toml
fuzz/src/: async_read.rs
handlebars/: CHANGELOG.md  Cargo.toml  README.md
handlebars/examples/: handlebars.rs
handlebars/src/: assigns.rs  handlebars_conn_ext.rs  handlebars_handler.rs  lib.rs
head/: CHANGELOG.md  Cargo.toml  README.md
head/examples/: head.rs
head/src/: lib.rs
head/tests/: tests.rs
html-rewriter/: Cargo.toml
html-rewriter/examples/: html-rewriter.rs
html-rewriter/src/: lib.rs
http/: CHANGELOG.md  Cargo.toml  README.md
http/benches/: h1_body_read.rs  h1_head_parse.rs  headers_build.rs
http/examples/: conn-example.rs  example.rs  http.rs  response_writes.rs  tokio-http.rs  unsend.rs
http/src/: after_send.rs  body.rs  body_encoder.rs  buffer.rs  bufwriter.rs  chunked_encoder.rs  conn.rs  connection_status.rs  copy.rs  error.rs  h2.rs  h3.rs  header_name.rs  header_value.rs  header_values.rs  headers.rs  http_compat.rs  http_compat0.rs  http_compat1.rs  http_config.rs  http_context.rs  lib.rs  liveness.rs  method.rs  mut_cow.rs  priority.rs  protocol_session.rs  received_body.rs  request_body.rs  rkyv_08.rs  server.rs  server_config.rs  state.rs  state_set.rs  (+5 more)
logger/: CHANGELOG.md  Cargo.toml  README.md
logger-macros/: CHANGELOG.md  Cargo.toml  README.md
macros/: CHANGELOG.md  Cargo.toml  README.md
method-override/: CHANGELOG.md  Cargo.toml  README.md
(+2466 files in other folders)
