[workspace]
resolver = "2"
members = [
        "api",
        "docs-check",
        "askama",
        "async-std",
        "aws-lambda",
        "aws-lambda-example",
        "basic-auth",
        "caching-headers",
        "channels",
        "client",
        "compression",
        "conn-id",
        "cookies",
        "example",
        "forwarding",
        "handlebars",
        "head",
        "http",
        "logger",
        "macros",
        "method-override",
        "native-tls",
        "proxy",
        "quinn",
        "redirect",
        "router",
        "rustls",
        "server-common",
        "sessions",
        "smol",
        "sse",
        "static",
        "static-compiled",
        "static-compiled-macros",
        "tera",
        "testing",
        "tokio",
        "trillium",
        "websockets",
        "webtransport",
]
exclude = ["controllers", "fuzz"]
