[workspace]
resolver = "2"
members = [
        "api",
        "docs-check",
        "askama",
        "async-std",
        "aws-lambda",
        "aws-lambda-example",
        "basic-auth",
        "bench",
        "caching-headers",
        "channels",
        "client",
        "compression",
        "conformance",
        "conn-id",
        "cookies",
        "example",
        "forwarding",
        "handlebars",
        "head",
        "http",
        "logger",
        "macros",
        "method-override",
        "native-tls",
        "proxy",
        "quinn",
        "redirect",
        "router",
        "rustls",
        "server-common",
        "sessions",
        "smol",
        "sse",
        "static",
        "static-compiled",
        "static-compiled-macros",
        "tera",
        "testing",
        "tokio",
        "trillium",
        "websockets",
        "webtransport",
]
exclude = ["controllers", "fuzz"]

[profile.bench-release]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
