[package]
name = "trillium-api-macros"
version = "0.1.0-rc.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "proc-macro derives for trillium-api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(macrotest)"] }


[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
trillium = { path = "../trillium" }
trillium-api = { path = "../api", features = ["url", "forms", "sonic-rs"] }
trillium-testing = { path = "../testing" }
serde = { version = "1.0.228", features = ["derive"] }
macrotest = "1.1.0"
rustversion = "1.0.21"
trybuild = "1.0.106"
runtime-macros = "1.1.1"
