[package]
name = "trillium-askama"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "askama templates for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
askama = "0.15.6"
log = "0.4.29"
trillium.workspace = true

[dev-dependencies]
trillium-smol.workspace = true
trillium-testing.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
