[package]
name = "trillium-askama"
version = "0.5.0"
edition = "2024"
description = "askama templates for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]

[dependencies]
log = "0.4.29"
askama = "0.16.0"
trillium.workspace = true

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }

