[package]
name = "myco-async-std-server"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
log = "0.4.13"
myco = { path = "../myco" }
async-std = "1.9.0"
myco-http = { path = "../http" }
myco-server-common = { path = "../server-common" }
signal-hook-async-std = "0.2.1"
signal-hook = "0.3.4"

[dev-dependencies]
env_logger = "0.8.3"
async-std = { version = "*", features = ["attributes"] }
