[package]
name = "trillium-async-std"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "async-std runtime adapter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = { version = "1.12.0", package = "async-std" }
log = "0.4.17"
trillium = { path = "../trillium", version = "^0.2.0" }
trillium-http = { path = "../http", version = "^0.2.0" }
trillium-macros = { version = "0.0.4", path = "../macros" }
trillium-server-common = { path = "../server-common", version = "^0.4.0" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.15"
signal-hook-async-std = "0.2.2"

[dev-dependencies]
env_logger = "0.10.0"

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
package = "async-std"
