[package]
name = "trillium-async-std"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "async-std runtime adapter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
futures-lite = "2.3.0"
log = "0.4.20"
trillium = { path = "../trillium", version = "0.2.20" }
trillium-http = { path = "../http", version = "0.3.17" }
trillium-macros = { version = "0.0.6", path = "../macros" }
trillium-server-common = { path = "../server-common", version = "0.5.2" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"
signal-hook-async-std = "0.2.2"

[dev-dependencies]
env_logger = "0.11.0"

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
