[package]
name = "trillium-async-std"
version = "0.5.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "async-std runtime adapter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-io = "2.6.0"
async-std = { version = "1.13.2", features = ["unstable"] }
futures-lite = "2.6.1"
log = "0.4.29"
trillium = { path = "../trillium", version = "0.3.0" }
trillium-http = { path = "../http", version = "0.4.0" }
trillium-macros = { version = "0.0.7", path = "../macros" }
trillium-server-common = { path = "../server-common", version = "0.6.0" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.3"
signal-hook-async-std = "0.4.0"

[dev-dependencies]
env_logger = "0.11.10"

[dev-dependencies.async-std]
version = "1.13.2"
features = ["attributes"]
