[package]
name = "myco-aws-lambda-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
myco-aws-lambda = { path = "../aws-lambda" }
lamedh_runtime = "0.3.0"
serde_json = "1.0.61"
env_logger = "0.8.2"
myco = { path = "../myco" }
myco-router = { path = "../router" }
myco-logger = { path = "../logger" }
myco-cookies = { path = "../cookies" }
myco-sessions = { path = "../sessions" }
myco-askama = { path = "../askama" }
futures-lite = "1.11.3"
askama = "0.10.5"
