[package]
name = "trillium-aws-lambda-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"

[dependencies]
trillium-aws-lambda = { path = "../aws-lambda" }
lamedh_runtime = "0.3.0"
serde_json = "1.0.68"
env_logger = "0.9.0"
trillium = { path = "../trillium" }
trillium-router = { path = "../router" }
trillium-logger = { path = "../logger" }
trillium-cookies = { path = "../cookies" }
trillium-sessions = { path = "../sessions" }
trillium-askama = { path = "../askama" }
futures-lite = "1.12.0"
askama = "0.11.0"
