[package]
name = "trillium-aws-lambda-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
publish = false
description = "example application using aws lambda"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
trillium-aws-lambda.workspace = true
lamedh_runtime = "0.3.0"
serde_json = "1.0.149"
env_logger = "0.11.10"
trillium.workspace = true
trillium-router.workspace = true
trillium-logger.workspace = true
trillium-cookies.workspace = true
trillium-sessions.workspace = true
trillium-askama.workspace = true
futures-lite = "2.6.1"
askama = "0.15.6"
