[package]
name = "trillium-aws-lambda"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "aws lambda adapter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
base64 = "0.21.5"
futures-lite = "2.0.1"
lamedh_runtime = "0.3.0"
log = "0.4.20"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
trillium = { path = "../trillium", version = "0.2.0"}
trillium-http = { path = "../http", version = "0.3.6" }
