[package]
name = "trillium-basic-auth"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
trillium = { path = "../trillium", version = "0.2" }

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
