[package]
name = "trillium-basic-auth"
version = "0.2.0-rc.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "basic auth for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
base64 = "0.22.1"
fieldwork = "0.5.0"
trillium = { path = "../trillium", version = "1.0.0-rc.1" }

[dev-dependencies]
test-harness = "0.3.1"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
