[package]
name = "trillium-caching-headers"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "http caching headers for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
etag = { version = "3.0.0", features = ["std"] }
httpdate = "1.0.2"
trillium = { path = "../trillium", version = "^0.2.0" }

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-static = { path = "../static", features = ["smol"] }

[features]
