[package]
name = "trillium-channels"
version = "0.3.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "websocket channels for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-broadcast = "0.7.0"
async-channel = "2.1.1"
dashmap = "6.0.0"
futures-lite = "2.1.0"
futures-util = "0.3.30"
log = "0.4.20"
querystrong = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
trillium = { path = "../trillium", version = "0.2.20" }
trillium-websockets = { path = "../websockets", version = "0.6.6" }

[dev-dependencies]
trillium-api = { path = "../api" }
trillium-caching-headers = { path = "../caching-headers" }
trillium-conn-id = { path = "../conn-id" }
trillium-logger = { path = "../logger" }
trillium-router = { path = "../router" }
trillium-smol = { path = "../smol" }
trillium-static-compiled = { path = "../static-compiled" }
trillium-testing = { path = "../testing" }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
