[package]
name = "trillium-cli"
version = "0.0.10"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "the trillium cli"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "trillium-cli"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
trillium = { path = "../trillium" }
trillium-logger = { path = "../logger" }
trillium-native-tls = { path = "../native-tls/" }
trillium-proxy = { path = "../proxy" }
trillium-rustls = { path = "../rustls/" }
trillium-smol-server = { path = "../smol-server" }
trillium-static = { path = "../static" }
structopt = "0.3.21"
serde = "1.0.123"
serde_json = "1.0.64"
trillium-html-rewriter = { path = "../html-rewriter/" }
trillium-websockets = { path = "../websockets/" }
trillium-router = { path = "../router" }
futures-lite = "1.11.3"
async-io = "1.3.1"
async-channel = "1.6.1"
broadcaster = "1.0.0"
ansi-to-html = "0.1.0"
trillium-client = { path = "../client" }
bat = { version = "0.18.0", default-features = false, features = [
  "atty",
  "clap",
  "dirs-next",
  "lazy_static",
  "paging",
  "wild",
  "regex-onig",
] }
atty = "0.2.14"
async-global-executor = "2.0.2"
blocking = "1.0.2"
async-fs = "1.5.0"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.4"
libc = "0.2.86"
nix = "0.19.1"
notify = "4.0.15"
