[package]
name = "trillium-cli"
version = "0.0.10"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "the trillium cli"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ansi-to-html = "0.1.0"
async-channel = "1.6.1"
async-fs = "1.5.0"
async-global-executor = "2.0.2"
async-io = "1.4.1"
atty = "0.2.14"
blocking = "1.0.2"
broadcaster = "1.0.0"
env_logger = "0.8.3"
futures-lite = "1.12.0"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.21"
trillium = { path = "../trillium", version = "^0.1.0" }
trillium-client = { path = "../client" }
trillium-html-rewriter = { path = "../html-rewriter" }
trillium-logger = { path = "../logger", version = "^0.1.0" }
trillium-native-tls = { path = "../native-tls/" }
trillium-proxy = { path = "../proxy" }
trillium-router = { path = "../router", version = "^0.1.0" }
trillium-rustls = { path = "../rustls" }
trillium-smol = { path = "../smol", version = "^0.1.0" }
trillium-static = { path = "../static" }
trillium-websockets = { path = "../websockets/", features = ["json"] }

[dependencies.bat]
version = "0.18.1"
default-features = false
features = [
  "atty",
  "clap",
  "dirs-next",
  "lazy_static",
  "paging",
  "wild",
  "regex-onig",
]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.9"
libc = "0.2.95"
nix = "0.21.0"
notify = "4.0.17"
