[package]
name = "trillium-client"
version = "0.7.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "http/1.x client for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.docs.rs]
features = ["sonic-rs", "websockets"]

[features]
websockets = ["dep:trillium-websockets", "dep:thiserror"]
parse = ["trillium-http/parse"]
sonic-rs = ["dep:sonic-rs", "dep:serde", "dep:thiserror"]
serde_json = ["dep:serde_json", "dep:serde", "dep:thiserror"]

[dependencies]
encoding_rs = "0.8.35"
futures-lite = "2.6.1"
httparse = "1.10.1"
log = "0.4.29"
size = "0.5.0"
trillium-server-common = { version = "0.6.0", path = "../server-common" }
trillium-websockets = { version = "0.7.0", path = "../websockets", optional = true }
mime = "0.3.17"
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = { version = "2.0.18", optional = true }
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"
memchr = "2.8.0"
sonic-rs = { version = "0.5.8", optional = true }
fieldwork = "0.5.0"

[dependencies.trillium-http]
path = "../http"
features = ["unstable"]
version = "0.4.0"

[dev-dependencies]
async-channel = "2.5.0"
async-global-executor = "3.1.0"
env_logger = "0.11.10"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
test-harness = "0.3.1"
trillium = { path = "../trillium" }
trillium-client = { path = ".", features = ["websockets"] }
trillium-smol = { path = "../smol/" }
trillium-testing = { path = "../testing" }
trillium-tokio = { path = "../tokio" }
trillium-rustls = { path = "../rustls" }
trillium-quinn = { path = "../quinn", features = ["webpki-roots"] }

[package.metadata.cargo-udeps.ignore]
development = ["trillium"]
