[package]
name = "trillium-client"
version = "0.9.3"
edition = "2024"
description = "http client for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium"]

[package.metadata.docs.rs]
features = ["sonic-rs", "websockets"]

[features]
websockets = ["dep:trillium-websockets", "dep:thiserror"]
parse = ["trillium-http/parse"]
sonic-rs = ["dep:sonic-rs", "dep:serde", "dep:thiserror"]
serde_json = ["dep:serde_json", "dep:serde", "dep:thiserror"]
webtransport = ["dep:trillium-webtransport", "dep:thiserror"]

[dependencies]
encoding_rs = "0.8.35"
futures-lite = "2.6.1"
httparse = "1.10.1"
log = "0.4.29"
trillium-server-common.workspace = true
trillium-websockets = { workspace = true, optional = true }
mime = "0.3.17"
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = { version = "2.0.18", optional = true }
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"
memchr = "2.8.0"
sonic-rs = { version = "0.5.8", optional = true }
fieldwork = "0.5.0"
trillium-macros.workspace = true
trillium-webtransport = { workspace = true, optional = true }
trillium-http = { version = "1.3.3", path = "../http", features = ["unstable"] }

[dev-dependencies]
async-channel = "2.5.0"
async-global-executor = "3.1.0"
async-io = "2.4"
async-net = "2.0"
env_logger = "0.11.10"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
rcgen = "0.14.7"
test-harness = "0.3.1"
trillium = { path = "../trillium" }
trillium-client = { path = ".", features = ["websockets"] }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
trillium-tokio = { path = "../tokio" }
trillium-rustls = { path = "../rustls" }
trillium-quinn = { path = "../quinn", features = ["webpki-roots"] }
