[package]
name = "trillium-client"
version = "0.9.8"
edition = "2024"
description = "http client for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium"]

[package.metadata.docs.rs]
features = ["sonic-rs", "websockets", "hickory", "sse"]

[features]
websockets = ["dep:trillium-websockets", "dep:thiserror"]
sse = ["dep:thiserror"]
sonic-rs = ["dep:sonic-rs", "dep:serde", "dep:thiserror"]
serde_json = ["dep:serde_json", "dep:serde", "dep:thiserror"]
webtransport = ["dep:trillium-webtransport", "dep:thiserror"]

# DNS resolution (incl. SVCB/HTTPS records) over DoH, using hickory-proto purely as a wire
# codec — trillium-client itself performs the IO over its own connection pool. Named after the
# dependency, not the capability, so an alternative codec can be added additively later.
hickory = ["dep:hickory-proto", "dep:async-channel"]

# Vestigial: the trillium-http http/1.x parser is now always selected. This feature is retained as a
# no-op for semver compatibility
parse = []

[dependencies]
encoding_rs = "0.8.35"
futures-lite = "2.6.1"
log = "0.4.29"
trillium-server-common = { version = "0.7.5", path = "../server-common" }
trillium-websockets = { workspace = true, optional = true }
mime = "0.3.17"
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = { version = "2.0.18", optional = true }
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"
async-lock = "3.4.2"
memchr = "2.8.0"
smallvec = { version = "1.15.1", features = ["const_new"] }
sonic-rs = { version = "0.5.8", optional = true }
fieldwork = "0.5.0"
trillium-macros.workspace = true
trillium-webtransport = { workspace = true, optional = true }
trillium-http = { version = "1.4.1", path = "../http", features = ["unstable"] }
hickory-proto = { version = "0.26", default-features = false, optional = true }
async-channel = { version = "2.5.0", optional = true }

[[example]]
name = "doh"
required-features = ["hickory"]

[dev-dependencies]
async-channel = "2.5.0"
async-global-executor = "3.1.0"
async-io = "2.4"
async-net = "2.0"
env_logger = "0.11.10"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
rcgen = "0.14.7"
test-harness = "0.3.1"
trillium = { path = "../trillium" }
trillium-client = { path = ".", features = ["websockets", "sse"] }
trillium-sse = { path = "../sse" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
trillium-tokio = { path = "../tokio" }
trillium-rustls = { path = "../rustls" }
trillium-quinn = { path = "../quinn", features = ["webpki-roots"] }
